<resources>
    <string name="app_name">EmployeeManagementSystem</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="designation">Designation</string>
    <string name="salary">Salary</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>