<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/first_name"
        android:minHeight="48dp"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/last_name"
        android:minHeight="48dp"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/email"
        android:minHeight="48dp"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:minHeight="48dp"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextDesignation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/designation"
        android:minHeight="48dp"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextSalary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salary"
        android:minHeight="48dp"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/delete" />
</LinearLayout>
